improvement: tweet sent date display BUG-FIX: QQ auth incorrectly improvement: set default timezone 'Asia/Chongqing' improvement: make scrollbar of thread panel shown automatically (not shown anyway)

--- a/trunk/web/css/dashboard.css
+++ b/trunk/web/css/dashboard.css
@@ -368,7 +368,7 @@ a.list-toggle-button {
 .thread-message-container {
 	height: 100%;
 	overflow-x: hidden;
-	overflow-y: scroll;
+	overflow-y: auto;
 }
 
 .message {
